--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,6 +16,7 @@ body {
     height: 100vh;
     //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
     // background: #D3D3D3;
+    // background: #0f0f0f;
     background-image: url("../public/bg.jpg");
     position: fixed;
     left: 0;
@@ -24,6 +25,7 @@ body {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
+    
   }
 }
 
